# skills-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  skills_cli.py
skills_cli/: __init__.py  cli.py  core.py
tests/: test_core.py
